<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme"
        android:icon="@drawable/ic_theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_system"
                    android:title="@string/theme_system"
                    android:checked="true" />
                <item
                    android:id="@+id/theme_light"
                    android:title="@string/theme_light" />
                <item
                    android:id="@+id/theme_dark"
                    android:title="@string/theme_dark" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_streaming"
        android:title="@string/menu_streaming"
        android:icon="@drawable/ic_stream"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@drawable/ic_history"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_tts_settings"
        android:title="@string/menu_tts_settings"
        android:icon="@drawable/ic_settings"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />

</menu>
